k8s/tools/uptime-kuma/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: default
  labels:
    app: uptime-kuma
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: uptime-kuma
